--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,8 @@ pytest-cov==4.1.0
 # Development
 black==23.12.1
 flake8==7.0.0
+
+# Web API
+fastapi==0.115.6
+uvicorn==0.34.0
+python-multipart==0.0.20
