feat: migrate LLM integration from Anthropic to GigaChat

--- a/config/.env.example
+++ b/config/.env.example
@@ -1,6 +1,8 @@
-ANTHROPIC_API_KEY=your_key_here
-CLAUDE_MODEL_CATEGORIZATION=claude-3-haiku-20240307
-CLAUDE_MODEL_SUMMARIZATION=claude-3-5-sonnet-20241022
+LLM_PROVIDER=gigachat
+GIGACHAT_AUTH_KEY=base64_clientid_clientsecret
+GIGACHAT_SCOPE=GIGACHAT_API_PERS
+GIGACHAT_MODEL_CATEGORIZATION=GigaChat-2
+GIGACHAT_MODEL_SUMMARIZATION=GigaChat-2-Max
 MAX_TOKENS=2048
 TEMPERATURE=0.3
 
