--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 LLM_PROVIDER=gigachat
 GIGACHAT_AUTH_KEY=base64_clientid_clientsecret
 GIGACHAT_SCOPE=GIGACHAT_API_PERS
+GIGACHAT_VERIFY_SSL=true
 GIGACHAT_MODEL_CATEGORIZATION=GigaChat-2
 GIGACHAT_MODEL_SUMMARIZATION=GigaChat-2-Max
 MAX_TOKENS=2048
